# poc-http-parser

./: .clang-format  fast_strcmp_macro_generator.php  http_SIMD_zero_mem_alloc_parser.h  http_parser_meth_two.h  http_state_machine.h  http_zero_mem_alloc_parser.h  readme.md
.github/workflows/: http_parser.yml  http_parser_macOS.yml  http_parser_ubuntu.yml
bench/: cpu_spec.txt  http_SSE_zero_mem_alloc_parser_bench.c  http_parser_meth_two_bench.c  http_parser_state_machine_bench.c  http_parsers_bench.cpp  http_zero_mem_alloc_parser_bench.c  readme.md
ci/: install_dependency_macOS.pl  run_tests_http_parsers.pl
documentation/: Doxyfile  readme.md
internal/: fast_strcmp_macro_generator.php
tests/: .gitignore  CMakeLists.txt  test-helper.h  test-http-SIMD-zero-mem-alloc-parser.c  test-http-SSE-zero-mem-alloc-parser.c  test-http-meth-two.c  test-http-parser-state-machine.c  test-http-parser-state-machine.cpp  test-http-zero-mem-alloc-parser.c  test-main.c
